# Hackcell

./: .gitignore  ProgressReport.tex  ProjectProposal.tex  README.md
FinalReport/: FinalReport.tex
hackcel/: .ghci  ChangeLog.md  hackcel.cabal
hackcel/src/: .ghci  demo  demo.hcl  demo2.hcl  test.hcl
hackcel/src/Data/Hackcel/: Core.hs
hackcel/src/Data/Hackcel/Core/: Eval.hs  Expression.hs  Interactive.hs  Spreadsheet.hs  Utils.hs
hackcel/src/Data/Hackcel/Wrapper/: DSL.hs  Expression.hs  IntList.hs  InterfaceTable.hs  NumberList.hs  NumberTable.hs  Numbers.hs  Parser.hs
hackcel/test/: InvalidateTests.hs  NumberListTests.hs  NumberTableTests.hs  ParserTests.hs  Test.hs
hackcell/: .ghci  ChangeLog.md  hackcell.cabal
hackcell/src/: .ghci
hackcell/src/Data/Hackcell/: Core.hs
hackcell/src/Data/Hackcell/Core/: Eval.hs  Expression.hs  Interactive.hs  Spreadsheet.hs  Utils.hs
hackcell/src/Data/Hackcell/Wrapper/: DSL.hs  InterfaceTable.hs  NumberList.hs  NumberTable.hs  Numbers.hs  Parser.hs
hackcell/test/: InvalidateTests.hs  NumberListTests.hs  NumberTableTests.hs  ParserTests.hs  Test.hs
presentation/: Presentation.dvi  Presentation.tex
