name:                hackcell
version:             0.1.0.0
synopsis:            A monadic spreadsheet library in Haskell
-- description:
homepage:            https://github.com/jorisburgers/Hackcell
license:             AllRightsReserved
author:              Joris Burgers, Ivo Gabe de Wolff, Lars van den Haak
maintainer:          j.j.f.burgers@students.uu.nl; ivogabe@ivogabe.nl; l.b.vandenhaak@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  ghc-options: -Wall
  build-depends:
      base >= 4 && < 5
    , containers >=0.5.5 && <0.6
    , tasty >= 0.7
    , tasty-quickcheck
    , tasty-hunit >= 0.10
    , hackcell
    , boxes >= 0.1.5 && < 2.0
    , ansi-terminal >= 0.8.0.2 && < 1.0

library
  exposed-modules:     Data.Hackcell.Core
                     , Data.Hackcell.Wrapper.DSL
                     , Data.Hackcell.Wrapper.NumberList
                     , Data.Hackcell.Wrapper.Numbers
                     , Data.Hackcell.Wrapper.NumberTable
                     , Data.Hackcell.Wrapper.Parser
  other-modules:       Data.Hackcell.Core.Eval
                     , Data.Hackcell.Core.Expression
                     , Data.Hackcell.Core.Spreadsheet
                     , Data.Hackcell.Core.Utils
                     , Data.Hackcell.Core.Interactive
  -- other-extensions:
  build-depends:       base >=4 && <5
                      , containers >=0.5.5 && <0.6
                      , mtl >= 2.2.1 && < 3.0
                      , uu-parsinglib >=2.9.1.1 && < 3.0
                      , boxes >= 0.1.5 && < 2.0
                      , ansi-terminal >= 0.8.0.2 && < 1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
